--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,7 @@
 		</dependency>        
 	</dependencies>
     <build>
+    	<finalName>gogirl.war</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-eclipse-plugin</artifactId>
